[package]
name = "shoebill"
version = "0.1.5"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"
description = "A Wadler/Leijen style pretty-printer"
repository = "https://github.com/ammkrn/shoebill"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/shoebill"
keywords = ["pretty", "printer", "pretty-printer", "wadler", "leijen"]
categories = ["text-processing", "command-line-interface", "development-tools", "rust-patterns", "visualization" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.5.1"
rustc-hash = "1.1.0"