[package]
name = "shoebill"
version = "0.2.0"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"
description = "A Wadler/Leijen style pretty-printer"
repository = "https://github.com/ammkrn/shoebill"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/shoebill"
keywords = ["pretty", "printer", "pretty-printer", "wadler", "leijen"]
categories = ["text-processing", "development-tools", "rust-patterns", "visualization" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
u64_indices = []

[dependencies]
indexmap = "1.5.1"
rustc-hash = "1.1.0"
